1차 전체 완료

--- a/work53/index.html
+++ b/work53/index.html
@@ -25,13 +25,21 @@
 				<div class="keyvisual">
 					<div class="swiper-container">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide"><img src="./assets/images/main_slide1.jpg" alt=""></div>
-							<div class="swiper-slide"><img src="./assets/images/main_slide1.jpg" alt=""></div>
+							<div class="swiper-slide"><img src="./assets/images/main_banner@2x.png" alt=""></div>
+							<div class="swiper-slide"><img src="./assets/images/main_banner@2x.png" alt=""></div>
+							<div class="swiper-slide"><img src="./assets/images/main_banner@2x.png" alt=""></div>
 						</div>
 						<div class="swiper-pagination"></div>
 					</div>
 				</div>
 				<div class="menu_01">
+					<ul class="menu_01_list">
+						<li><a href="" class=""><img src="./assets/images/main_icon02.png" alt=""><p>진료예약</p></a></li>
+						<li><a href="" class=""><img src="./assets/images/main_icon03.png" alt=""><p>호텔예약</p></a></li>
+						<li><a href="" class=""><img src="./assets/images/main_icon01.png" alt=""><p>뷰티예약</p></a></li>
+					</ul>
+				</div>
+				<!-- <div class="menu_01">
 					<ul class="justify_center">
 						<li><a href="" class="before_icon"><p>진료예약</p></a></li>
 						<li><a href="" class="before_icon"><p>호텔예약</p></a></li>
@@ -44,7 +52,7 @@
 						<li><a href=""><img src="./assets/images/menu5@2x.png" alt=""> 펫상담센터</a></li>
 						<li><a href=""><img src="./assets/images/menu6@2x.png" alt=""> 펫줌상담실</a></li>
 					</ul>
-				</div>
+				</div> -->
 				<div class="middle_banner">
 					<div class="swiper-container">
 						<div class="swiper-wrapper">
@@ -59,6 +67,7 @@
 					<h3>펫스타그램<img src="./assets/images/icon.png" alt=""></h3>
 					<ul>
 						<li><a href=""><img src="./assets/images/pet1@2x.png" alt=""></a></li>
+						<li><a href=""><img src="./assets/images/pet2@2x.png" alt=""></a></li>
 						<li><a href=""><img src="./assets/images/pet2@2x.png" alt=""></a></li>
 					</ul>
 				</div>
@@ -184,9 +193,9 @@
 					delay: 2000,
 				},
 				pagination: {
-					el: '#main .keyvisual .swiper-pagination',
-					clickable: true,
-				}
+          el: "#main .keyvisual .swiper-pagination",
+          type: "fraction",
+        }
 			})
 			// 중간배너
 			var slider02 = new Swiper('#main .middle_banner .swiper-container', {
