--- a/work53/pages/beautyshop.html
+++ b/work53/pages/beautyshop.html
@@ -109,14 +109,16 @@
             <div class="part">
               <h5>예약시간<p>* 입실시간은 지켜주세요.</p>
               </h5>
-                <ul class="select_list">
-                  <li class="">09 : 00</li>
-                  <li class="disable">09 : 30</li>
-                  <li class="">10 : 00</li>
-                  <li class="">10 : 30</li>
-                  <li class="">11 : 00</li>
-                  <li class="">11 : 30</li>
+              <div class="swiper-container">
+                <ul class="swiper-wrapper select_list">
+                  <li class="swiper-slide active">09 : 00</li>
+                  <li class="swiper-slide disable">09 : 30</li>
+                  <li class="swiper-slide ">10 : 00</li>
+                  <li class="swiper-slide ">10 : 30</li>
+                  <li class="swiper-slide ">11 : 00</li>
+                  <li class="swiper-slide ">11 : 30</li>
                 </ul>
+              </div>
             </div>
             <div class="part">
               <h5>체중<p>* 체중에 따른 요금 차이가 없는 곳은 가려집니다.</p>
@@ -201,21 +203,21 @@
           <div class="dl_wrap">
             <dl>
               <dt>
-                전체미용 
-                <strong>중형견 / 5 ~ 10Kg</strong>
+                <p>전체미용 </p>
+                중형견 / 5 ~ 10Kg
               </dt>
               <dd>150,000원</dd>
             </dl>
             <dl>
-              <dt>발톱</dt>
+              <dt><p>발톱</p></dt>
               <dd>20,000원</dd>
             </dl>
             <dl>
-              <dt>스파</dt>
+              <dt><p>스파</p></dt>
               <dd>30,000원</dd>
             </dl>
             <dl>
-              <dt>테디베어컷</dt>
+              <dt><p>테디베어컷</p></dt>
               <dd>130,000원</dd>
             </dl>
           </div>
