--- a/work53/pages/login.html
+++ b/work53/pages/login.html
@@ -42,11 +42,10 @@
 				</div>
 				<div class="line"><span>OR</span></div>
 				<ul class="sns_login">
-					<li class="rogpet"><a href=""><img src="../assets/images/rogpet@2x.png" alt=""></a></li>
-					<li class="kakao"><a href=""><img src="../assets/images/kakao@2x.png" alt=""></a></li>
-					<li class="naver"><a href=""><img src="../assets/images/naver@2x.png" alt=""></a></li>
-					<li class="face"><a href=""><img src="../assets/images/facebook_Social Button@2x.png" alt=""></a></li>
-					<!-- <li class="google"><a href=""><img src="../assets/images/google_Social Button@2x.png" alt=""></a></li> -->
+					<li class="rogpet"><a href=""><img src="../assets/images/ico_rogpet@2x.png" alt="">로그펫 일반회원 가입</a></li>
+					<li class="kakao"><a href=""><img src="../assets/images/ico_kakao@2x.png" alt="">카카오 아이디로 가입</a></li>
+					<li class="naver"><a href=""><img src="../assets/images/ico_naver@2x.png" alt="">네이버 아이디로 가입</a></li>
+					<li class="facebook"><a href=""><img src="../assets/images/ico_facebook@2x.png" alt="">페이스북 아이디로 가입</a></li>
 				</ul>
 			</div>
 		</div>
