--- a/work53/pages/mypage_02.html
+++ b/work53/pages/mypage_02.html
@@ -43,7 +43,7 @@
                         <h4><span>예약내역</span></h4>
                         <div class="panel">
                             <ul class="list">
-                                <li>
+                                <li class="strong">
                                     <span class="cate">진료</span>
                                     <span class="place">스마트 동물 병원</span>
                                     <span class="date">09.07 14:00</span>
