--- a/work53/pages/mypage_modify.html
+++ b/work53/pages/mypage_modify.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="row">
                             <label for="">성별</label>
-                            <div class="radio_wrap flex_center">
+                            <div class="radio_wrap">
                                 <div class="check_ty01">
                                     <input type="radio" name="gender" id="gender1">
                                     <label for="gender1">남성</label>
