--- a/work53/pages/mypage_02.html
+++ b/work53/pages/mypage_02.html
@@ -8,7 +8,6 @@
 	<title>Rogpet - login</title>
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="https://jqueryui.com/resources/demos/style.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
@@ -99,7 +98,7 @@
 	</div>
 
     <!-- 공통 팝업(기간검색, 별점주기) -->
-	<div class="layer_popup layer_mypage02 period_form">
+	<div class="layer_popup layer_mypage02">
 		<div class="popup">
 			<h5 class="popup_header">
 				<a href="" class="btn_close">&times;</a>
