--- a/work53/pages/mypage_09.html
+++ b/work53/pages/mypage_09.html
@@ -23,7 +23,7 @@
 
 
 		<div id="container">
-			<div id="content" class="mypage02 counhistory">
+			<div id="content" class="mypage02 mypage09">
                 <h3>
                     댕댕이님,<br>
                     상담 확정 된 건이 <span>2회</span> 있습니다.
