--- a/work53/pages/diagnosis_02.html
+++ b/work53/pages/diagnosis_02.html
@@ -82,8 +82,11 @@
                             </div>
                         </div>
                         <div class="mt_30 kind">
-                            <h5>진료종류</h5>
-                            <ul class="select_list kind_list">
+                            <h5>
+                                진료종류
+                                <p>* 중복선택 가능합니다.</p>
+                            </h5>
+                            <ul class="select_list kind_list checkbox">
                                 <li class="">예방접종</li>
                                 <li>구강검진</li>
                                 <li>피부질환</li>
