--- a/pages/mypage_modify.html
+++ b/pages/mypage_modify.html
@@ -35,12 +35,12 @@
                                     </div>
                                     <div class="info">
                                         <h5>댕댕이</h5>
-                                        <div class="selected_menu">
+                                        <!-- <div class="selected_menu">
                                             <ul class="follow">
                                                 <li>팔로워 <strong>0</strong></li>
                                                 <li>팔로잉 <strong>0</strong></li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -52,12 +52,12 @@
                                     </div>
                                     <div class="info">
                                         <h5>댕댕이</h5>
-                                        <div class="selected_menu">
+                                        <!-- <div class="selected_menu">
                                             <ul class="follow">
                                                 <li>팔로워 <strong>0</strong></li>
                                                 <li>팔로잉 <strong>0</strong></li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
