ver6 최종수정사항 : 마이페이지 완료

--- a/pages/mypage_01.html
+++ b/pages/mypage_01.html
@@ -29,10 +29,10 @@
                     </div>
                     <div class="info">
                         <h5>댕댕이</h5>
-                        <ul class="follow">
+                        <!-- <ul class="follow">
                             <li>팔로우 <strong>0</strong></li>
                             <li>팔로우 <strong>0</strong></li>
-                        </ul>
+                        </ul> -->
                         <p>친구 초대하고 <span>5,000P</span> 받기</p>
                     </div>
                 </div>
