메타태그 확대 / hospital_02 체중 중복선택 삭제

--- a/pages/hospital_02.html
+++ b/pages/hospital_02.html
@@ -46,7 +46,7 @@
                     <div class="inner">
                         <div class="part">
                             <h5>체중<p>* 체중에 따른 요금 차이가 없는 곳은 가려집니다.</p></h5>
-                            <ul class="select_list checkbox">
+                            <ul class="select_list">
                                 <li class=" active"> ~ 5Kg</li>
                                 <li class="">5 ~ 10Kg</li>
                                 <li class="">10Kg ~</li>
