하단 고정메뉴 이미지 , 메뉴명 변경

--- a/pages/mypage_03.html
+++ b/pages/mypage_03.html
@@ -123,10 +123,10 @@
         <footer id="bottomMenu">
             <ul class="category">
                 <li class="active"><a href="">진료예약</a></li>
-                <li><a href="">펫상담실</a></li>
-                <li><a href="">펫스타그램</a></li>
-                <li><a href="">Pet Mall</a></li>
-                <li><a href="">Mypage</a></li>
+				<li><a href="">호텔예약</a></li>
+				<li><a href="">뷰티예약</a></li>
+				<li><a href="">Pet Mall</a></li>
+				<li><a href="">Mypage</a></li>
             </ul>
         </footer>
     </div>
